[package]
name = "srun-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curl = "0.4.44"
daemonize = "0.5.0"
default-net = "0.14.1"
regex = "1.7.3"
rust-crypto = "0.2.36"
serde = "1.0.159"
serde_derive = "1.0.159"
serde_yaml = "0.9.19"
sha1 = "0.10.5"
urlencoding = "2.1.2"
yaml = "0.3.0"
log = "0.4.17"
simple_logger = "4.1.0"
hmac = "0.12.1"
md-5 = "0.10.5"
sha-1 = "0.10.1"
base64 = "0.21.0"
sha1_smol = "1.0.0"
serde_json = "1.0.95"
lazy_static = "1.4.0"
clap = { version = "4.0", features = ["derive"] }
uuid = { version = "1.3.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
